--- a/site/assets/lang/gradients.json
+++ b/site/assets/lang/gradients.json
@@ -76,5 +76,8 @@
     },
     "strike": {
         "en_US": "Strikethrough"
+    },
+    "mini-message": {
+        "en_US": "Use Mini-Message"
     }
 }
