fix some small stuff

--- a/public/i18n/en-US/app.json
+++ b/public/i18n/en-US/app.json
@@ -13,8 +13,8 @@
         "colorCodeStripper": "Color Code Stripper",
         "presetTools": "Preset Tools",
         "changeLocale": "Change Locale",
-        "privacyPolicy": "Private Policy",
-        "github": "Github",
+        "privacyPolicy": "Privacy Policy",
+        "github": "GitHub",
         "discord": "Discord"
     }
 }
