--- a/public/i18n/en-US/app.json
+++ b/public/i18n/en-US/app.json
@@ -12,9 +12,7 @@
         "ramCalculator": "RAM Calculator",
         "colorCodeStripper": "Color Code Stripper",
         "presetTools": "Preset Tools",
-        "changeLocale": "Change Locale",
-        "privacyPolicy": "Privacy Policy",
-        "github": "GitHub",
-        "discord": "Discord"
+        "changeLocale": "Language",
+        "privacyPolicy": "Privacy Policy"
     }
 }
