--- a/public/i18n/en-US/presettools.json
+++ b/public/i18n/en-US/presettools.json
@@ -1,5 +1,8 @@
 {
     "presettools": {
-        
+        "title": "Preset Updater",
+        "subtitle": "This will update older preset versions to the newest version.",
+        "input": "Preset input",
+        "output": "Output"
     }
 }
