fix unique key error for once, and add kofi to i18n and navbar

--- a/public/i18n/en-US/home.json
+++ b/public/i18n/en-US/home.json
@@ -1,6 +1,7 @@
 {
     "home": {
         "subtitle": "A Minecraft multitool for",
-        "typerWords": "developers,server owners,players,you"
+        "typerWords": "developers,server owners,players,you",
+        "kofi": "Consider donating if this helped you"
     }
 }
