add privacy policy to translations

--- a/public/i18n/en-US/presettools.json
+++ b/public/i18n/en-US/presettools.json
@@ -2,7 +2,7 @@
     "presettools": {
         "title": "Preset Updater",
         "subtitle": "This will update older preset versions to the newest version.",
-        "input": "Preset input",
+        "input": "Preset Input",
         "output": "Output"
     }
 }
