--- a/public/i18n/nl-NL/home.json
+++ b/public/i18n/nl-NL/home.json
@@ -1,6 +1,7 @@
 {
     "home": {
         "subtitle": "Een Minecraft multi-tool voor",
-        "typerWords": "ontwikkelaars,server eigenaren,spelers,jou!"
+        "typerWords": "ontwikkelaars,server eigenaren,spelers,jou!",
+        "kofi": "Overweeg een donatie als dit u heeft geholpen"
     }
 }
