--- a/public/i18n/en-US/animtab.json
+++ b/public/i18n/en-US/animtab.json
@@ -2,27 +2,8 @@
     "animtab": {
         "title": "Animated TAB",
         "subtitle": "TAB plugin gradient animation creator",
-        "output": "Output",
-        "outputSubtitle": "This is what you put in the chat. Click on it to copy.",
-        "colors": {
-            "one": "{{ value }} color",
-            "other": "{{ value }} colors"
-        },
-        "hexColor": "Hex Color",
         "animationName": "Animation Name",
-        "animationText": "Animation Text",
         "speed": "Speed",
-        "formatCharacter": "Format Character",
-        "outputFormat": "Output Format",
-        "customFormat": "Custom Format",
-        "placeholders": "Placeholders:",
-        "formatting": "Formatting",
-        "character": "Character",
-        "presets": "Presets",
-        "export": "Export",
-        "bold": "Bold",
-        "strikethrough": "Strikethrough",
-        "underline": "Underline",
-        "italic": "Italic"
+        "outputFormat": "Output Format"
     }
 }
