--- a/public/i18n/es-ES/home.json
+++ b/public/i18n/es-ES/home.json
@@ -1,6 +1,7 @@
 {
     "home": {
         "subtitle": "Una multitool para Minecraft para",
-        "typerWords": "desarrolladores,propietarios de servidores,jugadores,usted"
+        "typerWords": "desarrolladores,propietarios de servidores,jugadores,usted",
+        "kofi": "Considerar donar si esto te ayudo"
     }
 }
