last couple things to translate

--- a/public/i18n/en-US/animtab.json
+++ b/public/i18n/en-US/animtab.json
@@ -4,6 +4,7 @@
         "subtitle": "TAB plugin gradient animation creator",
         "animationName": "Animation Name",
         "speed": "Speed",
-        "outputFormat": "Output Format"
+        "outputFormat": "Output Format",
+        "outputType": "Output Type"
     }
 }
