--- a/public/i18n/en-US/colorstrip.json
+++ b/public/i18n/en-US/colorstrip.json
@@ -3,6 +3,7 @@
         "title": "Color Code Stripper",
         "subtitle": "Strips all color / format codes from text",
         "inputText": "Input Text",
-        "output": "Output"
+        "output": "Output",
+        "colorCodeType": "Color Code Type"
     }
 }
