--- a/public/i18n/es-ES/animtab.json
+++ b/public/i18n/es-ES/animtab.json
@@ -4,6 +4,7 @@
         "subtitle": "Creador de animaciones de gradiente de complemento TAB",
         "animationName": "Nombre de la animación",
         "speed": "Velocidad",
-        "outputFormat": "Formato de salida"
+        "outputFormat": "Formato de salida",
+        "outputType": "Tipo de salida"
     }
 }
