--- a/public/i18n/nl-NL/animtab.json
+++ b/public/i18n/nl-NL/animtab.json
@@ -4,6 +4,7 @@
         "subtitle": "TAB plugin overloop animatie generator",
         "animationName": "Animatie Naam",
         "speed": "Snelheid",
-        "outputFormat": "Uitkomst Opmaak"
+        "outputFormat": "Uitkomst Opmaak",
+        "outputType": "Uitkomst Type"
     }
 }
