--- a/public/i18n/es-ES/colorstrip.json
+++ b/public/i18n/es-ES/colorstrip.json
@@ -3,6 +3,7 @@
         "title": "Quitar código de color",
         "subtitle": "Quita todos los códigos de color / formato del texto",
         "inputText": "Introducir texto",
-        "output": "Salida"
+        "output": "Salida",
+        "colorCodeType": "Tipo de código de color"
     }
 }
