--- a/public/i18n/nl-NL/colorstrip.json
+++ b/public/i18n/nl-NL/colorstrip.json
@@ -3,6 +3,7 @@
         "title": "Kleurcode Stripper",
         "subtitle": "Stript alle kleuren/opmaak codes van een tekst.",
         "inputText": "Tekst:",
-        "output": "Uitkomst"
+        "output": "Uitkomst",
+        "colorCodeType": "Kleurcode Type:"
     }
 }
