--- a/public/i18n/es-ES/animtab.json
+++ b/public/i18n/es-ES/animtab.json
@@ -5,6 +5,7 @@
         "animationName": "Nombre de la animación",
         "speed": "Velocidad",
         "outputFormat": "Formato de salida",
-        "outputType": "Tipo de salida"
+        "outputType": "Tipo de salida",
+        "length": "Longitud de la gradiente"
     }
 }
