--- a/public/i18n/pt-PT/privacypolicy.json
+++ b/public/i18n/pt-PT/privacypolicy.json
@@ -3,14 +3,6 @@
         "title": "Politica de privacidade para <span class=\"text-purple-500\">SimplyMC</span>",
         "1": "A privacidade dos nossos visitantes do SimplyMC é importante para nós",
         "2": "Na SimplyMC, reconhecemos que a sua privacidade e da sua informação pessoal é importante. Aqui está uma lista da informação que recolhemos quando visita o SimplyMC, e como asseguramos a sua segurança. Nunca venderemos a informação a terceiros.",
-        "3": "Cookies e Beacons Web",
-        "4": "Usamos cookies para guardar a sua informação, ral como as suas preferências quando visita o nosso website. Isto pode incluir apresentar um popup uma única vez quando visita o website, ou a habilidade de realizar login noutras partes, tais como foruns.",
-        "5": "Usamos também anuncios de terceiros no SimplyMC para suportar os custos do website. ALguns destes anunciantes podem usar cookies e beacons web quando realizam os seus anuncios, que irá também enviar dados a esses serviços (tais como a Google através do projeto Adsense) informações como o seu endereço IP, ISP , o navegador web usado para visitar o website, e em alguns casos se tem o Flash instalado. Isto é geralmente para objetivos de Geotrageting (apresentando anuncios de Nova York para quem navega de Nova York) ou apresentar anuncios especificos de sites visitados (tais como apresentar anuncios de culinária a cozinheiros que usam os seus dispositivos para pesquisar receitas de culinária).",
-        "6": "Cookies DART DoubleClick",
-        "7": "Também usamos cookies DART da Google DoubleClick, que coloca uma cookie DoubleClick no seu dispositivo quando visita um site com esta tecnologia (incluindo alguns sites Google Adsense). Esta cookie é usada para ser um target melhor aos seus interesses (designado por ”interest based targeting”).",
-        "8": "Os anuncios apresentados dependem do seu histórico de navegação (Por exemplo, se esteve a ver websites sobre visitar Las Vegas, poderá ver hoteis de Las Vegas em sites não relacionados, tais como um site sobre hockey). DART usa informação não identificavel. NÃO regista informação pessoal sobre o utilizador, tais como o seu nome, endereço de email, endereço físico, número de telefone, número de segurança social, número de conta bancária or número de cartão de crédito.",
-        "9": "Pode optar por não estar incluido neste serviço através de <a href=\"http://www.doubleclick.com/privacy/dart_adserving.aspx\" class=\"text-blue-400\">http://www.doubleclick.com/privacy/dart_adserving.aspx</a>",
-        "10": "Pode escolher desativar as cookies na totalidade ou parcialmente através do seu browser, ou nas preferencias de um programa especializado tal como o Norton Internet Security. No entanto, isto poderá dificultar a forma como interage com o nosso website e outros. Isto pode incluir a impossibilidade de fazer login no site ou forum.",
-        "11": "Apagar cookies não significa que está a desativar as cookies na totalidade. A não ser que tenha desativado as cookies com definições avançadas, a próxima vez que visitar o website, uma nova cookie será adicionada."
+        "3": "Cookies"
     }
 }
