--- a/i18n/es-ES/color.json
+++ b/i18n/es-ES/color.json
@@ -2,10 +2,7 @@
     "color": {
         "output": "Salida",
         "outputSubtitle": "Esto es lo que pones en el chat. Haz click en él para copiarlo.",
-        "colorAmount": {
-            "one": "{{ value }} Color",
-            "other": "{{ value }} Colores"
-        },
+        "colorAmount": "Color Amount",
         "hexColor": "Color Hex",
         "inputText": "Texto de entrada",
         "presets": "Predefinidos",
