--- a/i18n/pt-PT/color.json
+++ b/i18n/pt-PT/color.json
@@ -2,10 +2,7 @@
     "color": {
         "output": "Output",
         "outputSubtitle": "Isto é o que metes no chat. Clica para copia",
-        "colorAmount": {
-            "one": "{{ value }} Cor",
-            "other": "{{ value }} Cores"
-        },
+        "colorAmount": "Color Amount",
         "hexColor": "Cor Hexadecimal",
         "inputText": "Texto de Input",
         "presets": "Presets",
