--- a/i18n/es-ES/color.json
+++ b/i18n/es-ES/color.json
@@ -2,7 +2,7 @@
     "color": {
         "output": "Salida",
         "outputSubtitle": "Esto es lo que pones en el chat. Haz click en él para copiarlo.",
-        "colorAmount": "Color Amount",
+        "colorAmount": false,
         "hexColor": "Color Hex",
         "inputText": "Texto de entrada",
         "presets": "Predefinidos",
