remove ramcalc in favour of flags

--- a/i18n/en-US/app.json
+++ b/i18n/en-US/app.json
@@ -9,7 +9,7 @@
         "paperTimings": "Paper Timings",
         "misc": "Misc",
         "animatedTextures": "Animated Textures",
-        "ramCalculator": "RAM Calculator",
+        "flags": "Flags",
         "colorCodeStripper": "Color Code Stripper",
         "presetTools": "Preset Tools",
         "privacyPolicy": "Privacy Policy"
