some small changes

--- a/i18n/en-US/color.json
+++ b/i18n/en-US/color.json
@@ -16,6 +16,7 @@
         "underline": "Underline",
         "italic": "Italic",
         "customFormat": "Custom Format",
+        "custom": "Custom",
         "placeholders": "Placeholders:",
         "formatting": "Formatting",
         "character": "Character",
