--- a/i18n/en-US/app.json
+++ b/i18n/en-US/app.json
@@ -1,17 +1,16 @@
 {
     "nav": {
-        "gradients": "Gradients",
         "hexGradient": "Hex Gradient",
         "animatedTAB": "Animated TAB",
         "tabAnimationPreviewer": "TAB Animation Previewer",
-        "analysis": "Analysis",
         "sparkProfile": "Spark Profile",
         "paperTimings": "Paper Timings",
-        "misc": "Misc",
         "animatedTextures": "Animated Textures",
         "flags": "Flags",
         "colorCodeStripper": "Color Code Stripper",
         "presetTools": "Preset Tools",
-        "privacyPolicy": "Privacy Policy"
+        "privacyPolicy": "Privacy Policy",
+        "termsofService": "Terms of Service",
+        "more": "More Resources"
     }
 }
