--- a/i18n/ru-RU/color.json
+++ b/i18n/ru-RU/color.json
@@ -8,7 +8,7 @@
         "presets": "Пресеты",
         "exportedPreset": "Пресет успешно экспортирован в буфер обмена!",
         "importedPreset": "Настройки успешно импортированы!",
-        "invalidPreset": "НЕИЗВЕСТНЫЙ ПРЕСЕТ!\nЕсли это старый пресет, пожалуйста, обновите его, используя <a class=\"text-blue-500\" href=\"/PresetTools\">Preset Tools</a> страницу, Если нет, пожалуйста, сообщите <a class=\"text-blue-500\" href=\"https://discord.simplymc.art/\">Разработчикам</a>.",
+        "invalidPreset": "НЕИЗВЕСТНЫЙ ПРЕСЕТ!\nЕсли это старый пресет, пожалуйста, обновите его, используя <a class=\"text-blue-500\" href=\"/PresetTools\">Preset Tools</a> страницу, Если нет, пожалуйста, сообщите <a class=\"text-blue-500\" href=\"https://discord.gg/9vUZ9MREVz\">Разработчикам</a>.",
         "export": "Экспорт",
         "import": "Импорт (Вставь текст сюда)",
         "bold": "Жирный",
