--- a/i18n/zh-CN/color.json
+++ b/i18n/zh-CN/color.json
@@ -8,7 +8,7 @@
         "presets": "预设",
         "exportedPreset": "成功导出预设到剪贴板！",
         "importedPreset": "成功导入预设！",
-        "invalidPreset": "无效的预设！\n如果这是一个旧的预设，请使用<a class=\"text-blue-500\" href=\"/PresetTools\">预设工具</a>页面更新它，如果不是，请报告给<a class=\"text-blue-500\" href=\"https://discord.simplymc.art/\">开发者</a>。",
+        "invalidPreset": "无效的预设！\n如果这是一个旧的预设，请使用<a class=\"text-blue-500\" href=\"/PresetTools\">预设工具</a>页面更新它，如果不是，请报告给<a class=\"text-blue-500\" href=\"https://discord.gg/9vUZ9MREVz\">开发者</a>。",
         "export": "导出",
         "import": "导入（粘贴到这里）",
         "bold": "粗体",
